--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,6 +1,12 @@
 .container {
   background-color: blue;
-  height: 40px;
+  height: 50px;
+  position: fixed;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
 }
 .navigation {
   display: flex;
@@ -14,6 +20,7 @@
   text-decoration: none;
   font-size: 24px;
   font-weight: 700;
+  transition: color 0.5s;
 }
 .home:hover,
 .movie:hover {
