--- a/src/components/SearchForm/SearchForm.module.css
+++ b/src/components/SearchForm/SearchForm.module.css
@@ -1,15 +1,19 @@
 .form {
-  margin: 32px;
+  justify-content: center;
   display: flex;
-  width: 300px;
+  width: 400px;
   gap: 16px;
   align-items: end;
+  margin: 0 auto;
+  margin-top: 62px;
 }
 .container {
   display: flex;
   flex-direction: column;
   gap: 8px;
   position: relative;
+  align-items: center;
+  width: 100%;
 }
 .label {
   font-size: 20px;
@@ -23,6 +27,7 @@
   outline: transparent;
   border: none;
   border-radius: 4px;
+  width: 100%;
 }
 .error {
   color: red;
@@ -37,6 +42,8 @@
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  transition-property: color;
+  transition: 0.5s;
 }
 .button:hover {
   background-color: rgb(91, 91, 240);
