--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
+  background-color: rgba(161, 227, 254, 0.814);
 }
 
 h1,
