--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -14,17 +14,20 @@
   align-items: center;
   padding: 0 82px;
 }
-.home,
-.movie {
+.home {
   color: rgb(151, 220, 245);
   text-decoration: none;
   font-size: 24px;
-  font-weight: 700;
+  font-weight: 500;
   transition: color 0.5s;
 }
-.home:hover,
-.movie:hover {
-  color: rgb(0, 161, 81);
+.home:hover {
+  color: rgb(12, 241, 20);
+  font-size: 24px;
+  font-weight: 700;
+}
+.active {
+  color: rgb(212, 255, 0);
   text-decoration: underline;
   font-size: 24px;
   font-weight: 700;
