--- a/src/components/MovieList/MovieList.module.css
+++ b/src/components/MovieList/MovieList.module.css
@@ -1,34 +1,64 @@
-.list {
-  display: flex;
-  flex-wrap: wrap;
-  list-style: none;
-  gap: 16px;
-  padding-top: 60px;
+@media screen and (min-width: 320px) {
+  .list {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    gap: 16px;
+    padding-top: 74px;
+    align-items: center;
+    justify-content: center;
+  }
+  .listItem {
+    border: 1px solid #0511ef;
+    width: 260px;
+    padding: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 8px;
+    height: 400px;
+    justify-content: center;
+  }
+  .listItem:hover {
+    background-color: #06b5efe2;
+  }
+  .poster {
+    width: 200px;
+    height: 300px;
+    border-radius: 8px;
+    object-fit: cover;
+  }
+  .title {
+    font-size: 24px;
+    font-weight: 700;
+    margin-bottom: 10px;
+    text-align: center;
+    color: rgb(85, 83, 83);
+  }
+  a {
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
-.listItem {
-  border: 1px solid #0511ef;
-  width: 260px;
-  padding: 16px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+@media screen and (min-width: 768px) {
+  .listItem {
+    width: 280px;
+    padding: 16px;
+  }
+  .poster {
+    width: 220px;
+  }
 }
-.listItem:hover {
-  background-color: #06b5efe2;
-}
-.poster {
-  width: 200px;
-  height: 300px;
-  border-radius: 4px;
-  object-fit: cover;
-}
-.title {
-  font-size: 20px;
-  font-weight: 700;
-  margin-bottom: 10px;
-  text-align: center;
-  color: rgb(85, 83, 83);
-}
-a {
-  text-decoration: none;
+@media screen and (min-width: 1024px) {
+  .listItem {
+    width: 320px;
+    padding: 16px;
+    height: 420px;
+  }
+  .poster {
+    width: 240px;
+    height: 340px;
+  }
 }
