--- a/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
+++ b/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
@@ -1,95 +1,161 @@
-.details {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 100%;
-  gap: 24px;
-  padding: 32px 0;
+@media screen and (min-width: 320px) {
+  .details {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    gap: 24px;
+    padding: 32px 0;
+  }
+  .container {
+    padding: 0 16px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+  }
+  .mainContainer {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    align-items: center;
+    justify-content: center;
+  }
+  .paster {
+    width: 260px;
+    height: 340px;
+    object-fit: cover;
+    border-radius: 8px;
+  }
+  .title {
+    font-size: 30px;
+    font-weight: 700;
+    margin-bottom: 10px;
+    text-align: center;
+    color: rgb(75, 75, 75);
+  }
+  .vote {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    font-size: 20px;
+    font-weight: 400;
+    margin-bottom: 20px;
+    text-align: center;
+    color: rgb(5, 38, 250);
+  }
+  .genreContainer {
+    font-size: 14px;
+    font-weight: 400;
+    margin-bottom: 10px;
+    text-align: center;
+    color: rgb(82, 82, 83);
+  }
+  .genre {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+  }
+  .containerDesc {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+  }
+  .release {
+    font-size: 16px;
+    font-weight: 400;
+    margin-bottom: 10px;
+    text-align: left;
+    text-transform: uppercase;
+    color: rgb(84, 84, 85);
+  }
+  .text {
+    text-transform: uppercase;
+    padding-right: 8px;
+  }
+  .overview {
+    font-size: 16px;
+    font-weight: 400;
+    margin-bottom: 10px;
+    text-align: left;
+    color: rgb(73, 73, 75);
+    width: 260px;
+  }
+  .list {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 24px;
+    margin-top: 24px;
+  }
+  .listItem {
+    font-size: 22px;
+    font-weight: 400;
+    margin-bottom: 10px;
+    text-align: left;
+    color: rgb(80, 80, 247);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    gap: 4px;
+    width: 100px;
+  }
+  .icon {
+    width: 24px;
+    height: 24px;
+  }
 }
-.mainContainer {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 42px;
-  padding: 0 32px;
-  align-items: center;
+@media screen and (min-width: 768px) {
+  .container {
+    padding: 0 32px;
+  }
+  .mainContainer {
+    justify-content: flex-start;
+  }
+
+  .paster {
+    width: 520px;
+    height: 640px;
+  }
+  .title {
+    font-size: 60px;
+    font-weight: 700;
+  }
+  .vote {
+    font-size: 24px;
+  }
+  .genreContainer {
+    font-size: 16px;
+  }
+  .release {
+    font-size: 24px;
+  }
+
+  .overview {
+    width: 600px;
+  }
+  .listItem {
+    font-size: 22px;
+    font-weight: 400;
+    margin-bottom: 10px;
+    text-align: left;
+    color: rgb(80, 80, 247);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    gap: 4px;
+  }
 }
-.paster {
-  width: 420px;
-  height: 540px;
-}
-.title {
-  font-size: 40px;
-  font-weight: 700;
-  margin-bottom: 10px;
-  text-align: center;
-  color: rgb(75, 75, 75);
-}
-.vote {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  font-size: 24px;
-  font-weight: 400;
-  margin-bottom: 20px;
-  text-align: center;
-}
-.genreContainer {
-  font-size: 16px;
-  font-weight: 400;
-  margin-bottom: 10px;
-  text-align: center;
-  color: rgb(82, 82, 83);
-}
-.genre {
-  display: flex;
-  gap: 16px;
-}
-.containerDesc {
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
-}
-.release {
-  font-size: 16px;
-  font-weight: 400;
-  margin-bottom: 10px;
-  text-align: left;
-  text-transform: uppercase;
-  color: rgb(84, 84, 85);
-}
-.text {
-  text-transform: uppercase;
-  padding-right: 8px;
-}
-.overview {
-  font-size: 18px;
-  font-weight: 400;
-  margin-bottom: 10px;
-  text-align: left;
-  color: rgb(73, 73, 75);
-  width: 500px;
-}
-.list {
-  list-style: none;
-  display: flex;
-  gap: 24px;
-}
-.listItem,
-.listItems {
-  font-size: 22px;
-  font-weight: 400;
-  margin-bottom: 10px;
-  text-align: left;
-  color: rgb(80, 80, 247);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-decoration: none;
-  gap: 4px;
-}
-.icon {
-  width: 24px;
-  height: 24px;
+@media screen and (min-width: 1440px) {
+  .overview {
+    width: 800px;
+  }
+  .mainContainer {
+    gap: 200px;
+    justify-content: flex-start;
+  }
 }
