--- a/src/components/MovieCast/MovieCast.module.css
+++ b/src/components/MovieCast/MovieCast.module.css
@@ -7,7 +7,7 @@
     justify-content: center;
   }
   .listItem {
-    border: 1px solid #716f6f;
+    border: 1px solid #0814f1;
     width: 220px;
     padding: 16px;
     display: flex;
@@ -15,27 +15,37 @@
     align-items: center;
     justify-content: center;
     border-radius: 8px;
+    gap: 8px;
   }
   .image {
-    width: 160px;
-    height: 160px;
+    width: 100%;
+    height: 180px;
     border-radius: 8px;
     object-fit: cover;
   }
   .title {
     font-size: 20px;
     font-weight: 700;
-    margin-bottom: 10px;
     text-align: center;
-    color: rgb(81, 80, 80);
+    text-transform: uppercase;
+    color: rgb(181, 228, 255);
   }
   .character,
   .popularity {
-    text-transform: uppercase;
     font-size: 16px;
     font-weight: 400;
-    margin-bottom: 10px;
-    text-align: left;
-    color: rgb(57, 55, 55);
+    text-align: center;
+    color: rgb(210, 210, 210);
+  }
+    .noCast {
+    font-size: 30px;
+    color: #c5c2c2;
+    padding-bottom: 16px;
+  }
+
+}
+@media screen and (min-width: 768px) {
+  .listItem {
+    width: 240px;
   }
 }
