--- a/src/components/MovieList/MovieList.module.css
+++ b/src/components/MovieList/MovieList.module.css
@@ -11,7 +11,6 @@
   .listItem {
     border: 1px solid #0511ef;
     width: 260px;
-    padding: 8px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -20,20 +19,27 @@
     justify-content: center;
   }
   .listItem:hover {
-    background-color: #06b5efe2;
+    background-color: #0635efe2;
+  }
+  .link {
+    display: flex;
+    gap: 16px;
   }
   .poster {
-    width: 200px;
+    width: 100%;
     height: 300px;
     border-radius: 8px;
     object-fit: cover;
+  }
+  .titleContainer {
+    padding: 0 16px;
   }
   .title {
     font-size: 24px;
     font-weight: 700;
     margin-bottom: 10px;
     text-align: center;
-    color: rgb(85, 83, 83);
+    color: rgb(217, 213, 255);
   }
   a {
     text-decoration: none;
@@ -45,7 +51,6 @@
 @media screen and (min-width: 768px) {
   .listItem {
     width: 280px;
-    padding: 16px;
   }
   .poster {
     width: 220px;
@@ -54,11 +59,11 @@
 @media screen and (min-width: 1024px) {
   .listItem {
     width: 320px;
-    padding: 16px;
-    height: 420px;
+    /* padding: 16px; */
+    height: 480px;
   }
   .poster {
-    width: 240px;
-    height: 340px;
+    width: 280px;
+    height: 380px;
   }
 }
