--- a/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
+++ b/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
@@ -31,7 +31,7 @@
     font-weight: 700;
     margin-bottom: 10px;
     text-align: center;
-    color: rgb(75, 75, 75);
+    color: rgb(219, 218, 240);
   }
   .vote {
     display: flex;
@@ -43,20 +43,24 @@
     font-weight: 400;
     margin-bottom: 20px;
     text-align: center;
-    color: rgb(5, 38, 250);
+    color: rgb(5, 181, 250);
   }
   .genreContainer {
     font-size: 14px;
     font-weight: 400;
     margin-bottom: 10px;
     text-align: center;
-    color: rgb(82, 82, 83);
   }
   .genre {
     display: flex;
     flex-wrap: wrap;
     gap: 8px;
+    color: rgb(211, 228, 243);
   }
+  .genreName {
+    color: rgb(165, 165, 167);
+  }
+
   .containerDesc {
     display: flex;
     flex-direction: column;
@@ -68,7 +72,7 @@
     margin-bottom: 10px;
     text-align: left;
     text-transform: uppercase;
-    color: rgb(84, 84, 85);
+    color: rgb(197, 197, 198);
   }
   .text {
     text-transform: uppercase;
@@ -79,7 +83,7 @@
     font-weight: 400;
     margin-bottom: 10px;
     text-align: left;
-    color: rgb(73, 73, 75);
+    color: rgb(197, 197, 197);
     width: 260px;
   }
   .list {
@@ -95,7 +99,7 @@
     font-weight: 400;
     margin-bottom: 10px;
     text-align: left;
-    color: rgb(80, 80, 247);
+    color: rgb(60, 119, 246);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -136,6 +140,7 @@
 
   .overview {
     width: 600px;
+    font-size: 18px;
   }
   .listItem {
     font-size: 22px;
@@ -152,10 +157,16 @@
 }
 @media screen and (min-width: 1440px) {
   .overview {
+    font-size: 20px;
     width: 800px;
   }
   .mainContainer {
-    gap: 200px;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    gap: 100px;
     justify-content: flex-start;
+  }
+  .genre {
+    justify-content: center;
   }
 }
